# LSTM-NN-sp500-openu

./: keras networks.ipynb  keras.pptx
lstm/: lstm.pptx  spx lstm.ipynb
project/: pyproject.toml
