[tool.poetry]
name = "stock-price-predictions"
version = "0.1.0"
description = "Stock price prediction project for data science Open University course"
authors = ["Itay Azolay <itayazolay@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
plotly = "^4.10.0"
numpy = "^1.19.2"
scikit-learn = "^0.23.2"
pandas = "^1.1.2"
ipython = "^7.18.1"
sktime = "^0.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
