[tool.poetry]
name = "stock-price-predictions"
version = "0.1.0"
description = "Stock price prediction project for data science Open University course"
authors = ["Itay Azolay <itayazolay@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
plotly = "^4.10.0"
numpy = "<1.19.0"
scikit-learn = "^0.23.2"
pandas = "^1.1.2"
ipython = "^7.18.1"
sktime = "^0.4.2"
statsmodels = "^0.12.0"
tensorflow = "^2.3.1"
pandarallel = "^1.5.1"
xgboost = "^1.2.0"
pystan = "^2.19.1"
fbprophet = "^0.7.1"
fastai = "^2.0.16"
pydot = "^1.4.1"
graphviz = "^0.14.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
